feat: update icon and styles

--- a/src/styles/ForecastElement.scss
+++ b/src/styles/ForecastElement.scss
@@ -1,11 +1,19 @@
 .forecast-card {
-    padding: 10px;
     margin-bottom: 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 
-    div {
-        margin-right: 10px;
+    .time {
+        width: 8%;
+    }
+      
+    .temperature {
+        text-align: center;
+        width: 48%;
+    }
+    
+    .description {
+        width: 38%;
     }
 }
