--- a/src/styles/CurrentWeather.scss
+++ b/src/styles/CurrentWeather.scss
@@ -3,11 +3,15 @@
     flex-direction: column;
     align-items: center;
     border: 2px solid #ccc;
-    padding: 1rem;
-    width: 100%;
+    width: calc(100% - 4px);
+    position: relative;
   
     h2 {
       margin-bottom: 1rem;
+      position: absolute;
+      left: 15px; 
+      top: 10px;
+      margin: 0;
     }
   
     img {
@@ -38,6 +42,10 @@
 
     
     @media screen and (max-width: 768px) {
+      .weather-header-detail {
+        margin-top: 20px;
+      }
+
       .weather-details {
         width: 100%;
 
