feat: minor change styles

--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -1,4 +1,8 @@
 .forecast {
+    > h2 {
+      text-align: left;
+    }
+
     .forecast-group {
       border: 1px solid #ccc;
       margin-bottom: 20px; 
