--- a/src/styles/ForecastElement.scss
+++ b/src/styles/ForecastElement.scss
@@ -2,6 +2,7 @@
     margin-bottom: 10px;
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
 
     .time {
@@ -9,11 +10,13 @@
     }
       
     .temperature {
+        display: flex;
+        align-items: center;
         text-align: center;
-        width: 48%;
+        width: 68%;
     }
     
     .description {
-        width: 38%;
+        width: 18%;
     }
 }
